<resources>
    <string name="app_name">Foreigners In Bydgoszcz App</string>
    <string name="logo_description">Logo of Foreigners in Bydgoszcz</string>
    <string name="visit">VISIT</string>
    <string name="my_tasks">MY TASKS</string>
    <string name="formalities">FORMALITIES</string>
    <string name="picture_of_interesting_place">Picture of interesting place</string>
    <string name="name_of_the_place">Name of the place</string>
    <string name="place_description">This is a short but valuable place description. We can add even more text here to see how this text will apeat on our card.</string>
    <string name="see_on_map">see the map</string>
    <string name="pin_on_map_logo">Pin on map logo</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="center_the_map">Center the map</string>
    <string name="name_of_the_office">Name of the office</string>
    <string name="office_description">Office description</string>
    <string name="download_file">Download file</string>
    <string name="info">Info</string>
    <string name="about">About</string>
    <string name="about_title">About Foreigners in Bydgoszcz App</string>
    <string name="about_text">Foreigners in Bydgoszcz App is created for foreigners living in Bydgoszcz, to help them make themselves comfortable in their new city.\n\n
                AUTHORS:\n
                Developer: Natalia Nazaruk\n
                Formalities section: Kasia Stawowy\n
                All photos: Natalia Nazaruk\n</string>
    <string name="ok">OK</string>
    <string name="download_text">Soon you will be able to download offices information in pdf format. \nBefore it happens - please check your internet connection with a button to the left.</string>
    <string name="file_is_downloading">File is being downloaded</string>
    <string name="output_file_path">/foreigners.pdf</string>
    <string name="input_file_path">https://drive.google.com/file/d/1QisxNwBq7KG6r7DPKw5mK_rD22psQw6f/view?usp=sharing</string>
    <string name="download_error">Download error:</string>
    <string name="file_downloaded">File downloaded</string>
    <string name="here_check_internet">Here we check your internet connection</string>
    <string name="yes_net">awesome - you are connected</string>
    <string name="no_net">ups - you don\'t have internet!</string>
    <string name="add_task">add task</string>
    <string name="add_button_text">Add</string>
    <string name="status">status</string>
    <string name="new_task_name">My new task</string>
    <string name="text_empty_view">\nYou have no tasks yet!\nAdd your first task.</string>
    <string name="delete_all_entry">ARE YOU SURE YOU WANT TO DELETE ALL TASKS?</string>
    <string name="action_delete">Delete</string>
    <string name="list_deleted">All tasks have been deleted</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_tasks_dialog_text">DELETE ALL TASKS</string>
    <string name="delete_all_tasks">Delete all tasks</string>
    <string name="title_activity_new_task">New task</string>
    <string name="title_activity_modify_task">Modify task</string>
    <string name="delete_single_task">Are you sure you want to delete this task?</string>
    <string name="task_deleted">Task have been deleted</string>
    <string name="discard_changes_msg">Discard changes</string>
    <string name="discard">Discard</string>
    <string name="continue_editing">Continue editing</string>
    <string name="enter_task">You need to enter some task!</string>
    <string name="save_failed">Save not successful</string>
    <string name="task_added">Task successfully added</string>
    <string name="task_modified">Task successfully modified</string>
    <string name="save_task">Save task</string>
    <string name="task_not_deleted">Task couldn\'t been deleted</string>
    <string name="this_is_a_button_to_add_a_new_task">This is a button to add a new task</string>
    <string name="description_status_image">This icon shows status of the task - if it is done or not done</string>
    <string name="your_current_tasks">Your current tasks</string>
    <string name="place_name_1">Mill Island (Wyspa Młyńska)</string>
    <string name="place_name_2">Opera Nova</string>
    <string name="place_name_3">Main Post Office</string>
    <string name="place_name_4">Cathedral</string>
    <string name="place_name_5">Bydgoszcz Canal</string>
    <string name="place_name_6">Old granaries</string>
    <string name="place_name_7">Valley of Death</string>
    <string name="place_name_8">St. Vincent de Paul Basilica Minor</string>
    <string name="place_name_9">King Kasimir the Great Monument</string>
    <string name="place_name_10">Pomeranian Philharmonic</string>
    <string name="place_name_11">City Hall</string>
    <string name="place_desc_1">Best place to relax in the city center! You can enjoy green grass where you can play or rest, admire nice architecture around you, and let your kids play on the sandy beach.</string>
    <string name="place_desc_2">This modern, beautiful building is a house for one of the best in country musical theater, and is also one of the main symbols of the city.</string>
    <string name="place_desc_3">Looking at Main Post Office in Bydgoszcz, you can really feel like you\'re in Berlin. This neo-Gothic building picturesquely located on the banks of the Brda River is a great city decoration.</string>
    <string name="place_desc_4">This Gothic church is the most valuable monument of the city, both due to its architecture and valuable interiors. It is also beautifully located, right next to the river and among greenery, and at the same time in the heart of the city.</string>
    <string name="place_desc_5">It is the oldest inland canal in Poland still in use. You can just take your boat and sail straight to Germany or the Netherlands. If you don\'t have a boat you can just rent a kayak. Or just admire the beuty of this place.</string>
    <string name="place_desc_6">These three granaries with a frame structure, located just above the Brda River, are the main symbol of Bydgoszcz also present in the city logo. The oldest of them comes from 1793. Nowadays there is an interesting museum located inside.</string>
    <string name="place_desc_7">A place of mass murder and at the same time a grave of the inhabitants of Bydgoszcz and the surrounding area murdered in the autumn of 1939 by the Nazi army. Currently, it is a place of reverie, and at the same time a well-kept walking area.</string>
    <string name="place_desc_8">The impressive and characteristic building of the basilica was built in the neoclassical style. It is one of the most recognizable buildings in the city. Being nearby it is worth visiting the neighboring music districts.</string>
    <string name="place_desc_9">Equestrian statue of King Casimir the Great who gave Bydgoszcz city rights. The monument is very well liked by the locals, and tourists who often take photos with it.</string>
    <string name="place_desc_10">A musical center of Bydgoszcz, a meeting place for fans of high art and one of the most important cultural institutions in the city. The philharmonic orchestra is appreciated throughout Europe.</string>
    <string name="place_desc_11">Historic building, former Jesuit College, now the headquarters of the municipal authorities of Bydgoszcz. It is located in the heart of the Old Town</string>
    <string name="place_add_1">10 Mennica St</string>
    <string name="place_add_2">5 Focha St</string>
    <string name="place_add_3">6 Jagiellońska St</string>
    <string name="place_add_4">2 Farna St</string>
    <string name="place_add_5">Bydgoszcz</string>
    <string name="place_add_6">7-11 Grodzka St</string>
    <string name="place_add_7">Bołtucia St</string>
    <string name="place_add_8">2 Ossolińskich Av</string>
    <string name="place_add_9">2 Trybunalska St</string>
    <string name="place_add_10">6 Szwelbego St</string>
    <string name="place_add_11">1 Jezuicka St</string>
    <string name="formal_name_1">Passports Department</string>
    <string name="formal_name_2">Legalization of Stay</string>
    <string name="formal_name_3">Department of Civil Affairs</string>
    <string name="formal_name_4">Interactive application forms system</string>
    <string name="formal_name_5">Bydgoszcz City Card</string>
    <string name="formal_name_6">Vehicle registration</string>
    <string name="formal_name_7">Permanent residence</string>
    <string name="formal_name_8">Temporary residence</string>
    <string name="formal_name_9">Family Benefits-500Plus</string>
    <string name="formal_desc_1">Receipt of applications:   rooms no: 206, 207, 208, 240,  Issuing passports: room no 204 Office hours: Monday, Wednesday-Friday 7.30 am - 3.30 pm,  Tuesday 8.00 am - 6.00 pm   Hours of customer service:   Monday, Thursday, Friday 8.00 am- 2.40 pm, Tuesday 8.00 am - 5:40 pm, Wednesday 10.00 am - 2.40 pm.  The daily limit of tickets issued on Monday, Wednesday, Thursday and Friday for submitting an application for issuing a passport document is 100 pieces and for the receipt of a passport also 100 pieces. On Tuesdays, the daily limit is 150 items.</string>
    <string name="formal_desc_2">Remember to check which regulations are valid for citizens of your country.</string>
    <string name="formal_desc_3">Accepting applications regarding Polish citizenship takes place in the following hours:  Monday, Wednesday, Thursday 8.00 am to 1.00 pm, Tuesday 8.00 am to 2.00 pm   room 202  (2nd floor, building C), phone (52) 349-7231</string>
    <string name="formal_desc_4">This modern tool helps quickly and easily complete an online interactive application form for legalisation of stay and international protection.</string>
    <string name="formal_desc_5">To receive the Bydgoszcz City Card, you must apply for a card. Applications can be submitted personally at the Customer Service Center (Toruńska street 174A; Monday-Friday 7.00 am to 5.00 pm), at the Customer Service Point (Zygmunta Augusta street 10, Monday-Friday 8.00 am to 6.30 pm) or via the website: https://wnioski.bydgoskakartamiejska.com.pl/   After submitting the application, the card can be picked up in person at the Customer Service Center or at the Customer Service Point, depending on the place of application.   WARNING! In the case of an application submitted online, the card can be picked up only at the Customer Service Center. The Bydgoszcz City Card as a carrier of public transport tickets can be issued as a personal or bearer card.   In the case of applying for a naming card, attach a current photo with dimensions of min. 2.5 x 3 cm (eg current photo for school / student ID card, passport or ID card). The picture for personalizing the card can also be made free of charge in COK or POK.</string>
    <string name="formal_desc_6">Vehicle Registration Section at the Department of Communication Permits of the City of Bydgoszcz  Forms to download: https://um.bydgoszcz.pl/sprawy/wuk-rejestracja-pojazdu.asp</string>
    <string name="formal_desc_7">Notification of permanent residence of foreigners.  Registration office no 1   13 Przyrzecze st; 1st floor, room no 106   85-102 Bydgoszcz   phone 52 5858126, 52 5858840   Registration office Fordon  6 E. Gierczak st   85-791 Bydgoszcz   phone 52 5858737, 52 5858739   Registration office Wyżyny  18 Boya Żeleńskiego st  85-858 Bydgoszcz   phone 52 5858953, 52 5858952   POM CH Zielone Arkady  1 Wojska Polskiego st  85-171 Bydgoszcz  phone 52 5859466</string>
</resources>