<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorIcons"
    android:orientation="vertical"
    tools:context=".activities.PlacesActivity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        card_view:cardBackgroundColor="@color/colorIcons"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/picture_of_interesting_place"
                android:src="@drawable/ic_launcher_background"
                android:tag="image_tag" />

            <TextView
                android:id="@+id/place_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/standard_padding"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/name_of_the_place"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/place_description_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/standard_padding"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/place_description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/place_address_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="@dimen/standard_padding"
                    android:layout_toStartOf="@id/pin_img"
                    android:fontFamily="sans-serif"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    tools:text="3 Maja 3/4" />

                <ImageView
                    android:id="@+id/pin_img"
                    android:layout_width="25dp"
                    android:layout_height="35dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="@dimen/standard_padding"
                    android:layout_toStartOf="@+id/see_on_map_txt"
                    android:contentDescription="@string/pin_on_map_logo"
                    android:src="@drawable/location_map_pin_red5" />

                <TextView
                    android:id="@+id/see_on_map_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="@dimen/standard_padding"
                    android:fontFamily="sans-serif"
                    android:text="@string/see_on_map"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>